Fix button-wrapper so that card can have overflow visible

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -8,7 +8,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  overflow-x: hidden;
+  //overflow-x: hidden;
 
   &.formCard {
     overflow: visible;
@@ -18,24 +18,31 @@
     position: absolute;
     z-index: 9;
     top:0;
-    width:80px;
+    width:40px;
     height:40px;
     display: flex;
-    right:-40px;
-    transition: right 250ms;
+    right:0;
+    overflow: hidden;
+    transition: width 250ms;
 
     &.hasRemove {
-      width:120px;
-      right:-80px;
+      //width:120px;
+      //right:-80px;
     }
 
     &.editing {
       right:0;
+      width:80px;
+
+      &.hasRemove {
+        width:120px;
+      }
     }
 
     .edit-btn {
       width:40px;
       height:40px;
+      min-width:40px;
       background: #2b303b;
       color: #fff;
       display: flex;
@@ -50,7 +57,7 @@
 
       &.editing {
         background: green;
-        box-shadow: inset 0 -5px rgba(0,0,0,0.2);
+        box-shadow: inset 0 -3px rgba(0,0,0,0.2);
 
         &:hover {
           background: darken(green, 5%);
@@ -60,6 +67,7 @@
 
     .cancel-btn {
       width:40px;
+      min-width: 40px;
       height:40px;
       background: #f28304;
       color: #fff;
@@ -67,7 +75,7 @@
       justify-content: center;
       align-items: center;
       transition: all 250ms;
-      box-shadow: inset 0 -5px rgba(0,0,0,0.2);
+      box-shadow: inset 0 -3px rgba(0,0,0,0.2);
 
       &:hover {
         background: darken(#cd002d, 5%);
@@ -76,6 +84,7 @@
 
     .remove-btn {
       width:40px;
+      min-width: 40px;
       height:40px;
       background: #cd002d;
       color: #fff;
@@ -83,7 +92,7 @@
       justify-content: center;
       align-items: center;
       transition: all 250ms;
-      box-shadow: inset 0 -5px rgba(0,0,0,0.2);
+      box-shadow: inset 0 -3px rgba(0,0,0,0.2);
 
       &:hover {
         background: darken(#cd002d, 5%);
